--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -87,6 +87,8 @@ permalink: notepad
 - I can't hear you.
   - Oh, something happened with my headphones, but now it works.
 - I can't see you (Skype), (~~I don't see you~~), 
+- I should charge my laptop.
+  - Here we go! .. Sorry.. Go ahead!
 
 
 
@@ -136,6 +138,16 @@ permalink: notepad
 
 - Take a photo -> Take a picture
   - If we take a picture together in Bali, It will be cool.
+
+
+
+
+
+# Grammar
+
+- conjugate a verb
+
+
 
 
 
@@ -204,7 +216,356 @@ permalink: notepad
 
 # Current 
 
-Jennifer -> if I spend this money I will be broken. ?? is it correct?
+## Greeting -> Weather -> Weekend
+
+- Hi, Karyn. How are you getting on?
+
+- We had snowfall on Sunday
+  - And now there are a lot of snow in Saint-Petersburg. 
+  - You know...
+  - Snow melts and it becomes dirty .. nice weather.
+
+## Karyn
+
+**28/11/2019 - Business writing**
+
+- It is inappropriate to use **emoticons** such as smiley faces in a formal email.
+- I just received a very funny email. I'll **forward** it to you so that you can read it.
+- I'm sure I emailed you but I can't find the message in the **sent items** folder.
+- A red exclamation mark shows that an email is **urgent** or high priority.
+- Please send a **reply** as soon as possible.
+- The emails in my **inbox** are sorted according to the date that they were received. The most recent are on top.
+- I am sending you the updated contract in the **attachment**.
+- My boss insists on being **copied** on all work-related emails.
+- Unsent messages that you have saved get stored in the **drafts** folder.
+- My company has just installed new **spam** filtering software.
+
+
+
+**Email** -> TODO
+
+1. enquire
+2. order
+3. unfortunately
+4. afraid
+5. received
+6. arrange
+7. delivered
+8. regret
+9. inform
+10. assistance
+
+
+
+**Rewrite**
+
+1. Please, call me to arrange the conference in January.
+2. Lookin forward to seeing you next weekend.
+3. In my opinion Mr. Jameson's request is unnecessary.
+4. Thanks in advance for your help with the Dalton account.
+5. See you soon.
+
+
+
+**Preposition**
+
+1. in twenty minutes
+2. on the weekend
+3. at 5 o'clock
+4. by Friday at the latest
+5. at the afternoon.
+
+
+
+
+
+
+
+
+
+# Must/Have To/Should
+
+## Formal Vs unformal
+
+Must - formal, often used in writting
+
+Have to - unformal, prefer it when to speak
+
+
+
+## You decision Vs Situation
+
+Must - own decision
+
+Have to - doctor's decision (situation)
+
+
+
+**MUST**
+
+1. Obligation
+2. Strong advice
+3. Something forbidden (rule)
+
+
+
+**Should**
+
+1. Advice
+   - Prefer **shouldn't** if it's advice (not mustn't)
+
+
+
+**I think (option)**
+
+
+
+## TODO
+
+**I haven’t or I don’t have**
+
+**Have** is an interesting verb in that it serves many purposes. 
+
+Can be used as an auxiliary verb and the main verb
+
+Used as an auxiliary verb or helping verb
+
+For example, when we use **have** to make perfect tense forms, we use it as an auxiliary verb. Examples are given below.
+
+- I **have eaten** breakfast. when?
+- She **has broken** her arm. When? Sometime in the past
+- I **have seen** that film. Harriet
+
+In the three sentences given above, **have** doesn’t really have a meaning. It merely helps the other verbs (eat, break and see) to form their present perfect tense forms.
+
+**Have** can also be used an **ordinary (main) verb**. 
+
+In this case, it has a meaning. The ordinary verb **have** is used to express ideas such as possession, personal characteristics, relationships etc.
+
+I have a Toyota.
+
+- He **has** a fleet of cars. (He owns those cars.)
+- She **has** a nice personality. (Personal characteristics)
+- They **have** a daughter. (Relationships)
+
+In all of these three sentences, **have** is the main verb. **As you can see, there are no other verbs in these sentences.**
+
+When **have** is used as an auxiliary verb, we make questions by putting it before the subject. It is quite simple.
+
+- She **has written** a novel. (Statement)
+- **Has** she **written** a novel? (Question)
+- Did 
+
+When **have** is used as an ordinary verb, we make questions and negative forms with **do.**
+
+Study the examples given below.
+
+- She **has** a daughter. (Statement)
+- She **does not have** a daughter. (Negative) (NOT She hasn’t a daughter.)
+- **Does** she **have** a daughter? (Question) (NOT Hasn’t she a daughter?)
+- They **have** many friends.
+- They **do not have** many friends.
+- **Do** they **have** many friends? Have they many friends?
+- I have no time. **I don’t have any time.** Don’t you have any time?
+
+**Sometimes, you might hear people saying ‘She hasn’t a daughter’ or ‘I haven’t a car’, but remember that these forms are incorrect and very unusual.**
+
+**Conjugate a verb collocations**
+
+ Negative sentences in English require a helping verb to come before the word “not,” and when there is no other helping verb to be had, it’s “do” that steps in. So instead of just putting “no” or “not” at the beginning or the end of a sentence as many other languages do, English uses “do not” or “don’t.”
+
+ 
+
+ **Must  and have to shows obligation**
+
+I must talk to her before she leaves. Own decision
+
+Must is more formal All passengers must have a ticket.
+
+Use have to in spoken English. Must sounds strange.
+
+I have to go to work tomorrow.  situational
+
+**Must not and don’t have to are different**
+
+Visitors must not touch the paintings.it’s forbidden
+
+You don’t have to be here before ten. Not necessary but you  have a choice
+
+Passengers must not talk to the driver while the bus is moving. Forbidden 
+
+You don’t have to finish it today. Have a choice
+
+**Should** is used for advice or give opinions not for obligations the person has a choice
+
+You should go to bed earlier then you wouldn't feel so tired.
+
+He should do more work if he wants to get promoted.
+
+**Must can be used to give advice** You must try the fish.  It’s  delicious more emphatic stronger You really like the fish.
+
+You have to try the fish.  It is delicious.
+
+**When giving negative advice only use shouldn’t**   
+
+You **shouldn't** take the job if you don’t like the long commute.Give advice or express an opinion
+
+Don’t use mustn't don’t have to
+
+**MUST**
+
+Must **obligations** you feel strongly about
+
+I must remember to get him a birthday present.
+
+Obligations in formal written English
+
+All employees must wash their hands.
+
+**Strong advice**
+
+You must read it. It is an amazing story.
+
+**Saying something is forbidden**
+
+Children must not  be left unattended.
+
+In spoken English it is more common to say can’t
+
+**Have to**
+
+Obligations that depend on circumstances
+
+I have to wear glasses because I can’t see so clearly.
+
+Most obligations in spoken English
+
+Do you have to work tomorrow?
+
+Saying something is not necessary
+
+You don’t have to do this if you don’t want to.
+
+Strong advice
+
+You have to try this ice cream.
+
+**Should giving advice**
+
+You should try once more. I’m sure you’ll get it.
+
+**Giving negative advice**
+
+You shouldn’t work so hard. Take a break.
+
+Giving your opinion
+
+If they make us work overtime, they should pay us for it.
+
+
+
+Question 1
+Do you think I __should_______ apply for this job? Giving advice
+A
+should
+B
+must
+C
+have to
+D
+don't have to
+
+Question 2
+I think the government __should______ help young people to find jobs.expressing opinion
+A
+has to
+B
+mustn't
+C
+must
+D
+should
+
+Question 3
+I __have to______ leave now—I have a driving lesson.
+A
+must
+B
+don't have to
+C
+shouldn't
+D
+have to
+
+Question 4
+The film was rubbish. You _________ see it.shouldn’t see it
+A
+shouldn't
+B
+mustn't
+C
+don't have to
+D
+should
+Hey! You ________ smoke in here!
+A
+Should not
+B
+haven't to
+C
+mustn't
+D
+Don’t have to
+6.You ________ stay up too late if you have an exam tomorrow.
+
+
+have to
+
+
+shouldn't
+
+
+must
+
+
+don't have to
+7.It’s a public holiday tomorrow, so I ________ go to work.
+Must not
+Should not
+Don’t have to
+Must
+
+8.All employees _must_______ wash hands before starting work.
+
+
+must
+
+
+don't have to
+
+
+Mustn't
+should
+
+
+
+
+9.What time ________ meet him?
+You must
+Have you to
+Do you have to
+Must you
+
+10.You _________ buy tickets in advance—you can’t buy them the same day.
+Don’t have to
+Should
+Must
+
+
+
+## Jennifer
+
+If I spend this money I will be broken. ?? is it correct?
 
 ## if and wish
 
