--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -10,6 +10,31 @@ permalink: notepad
 
 # ARTICLES
 
+# On / In / At
+
+- I'll be back **in** the afternoon.
+
+- At night
+
+- In the morning
+
+- In Summer
+
+- In Winter
+
+- On Monday, Tuesday
+
+  
+
+# Abbreviation
+
+1. TIA - Thanks in advance
+
+2. IMO - In my opinion
+3. 21'' screen - 21 inch screen
+
+
+
 # If I do VS if I did
 
 ## Usage
@@ -40,6 +65,7 @@ permalink: notepad
 
 - Hello [name], How are you?
 - Hi, [name]. How are you getting on?
+- Hello, How are you doing?
 
 ## Weekend
 
@@ -225,59 +251,14 @@ permalink: notepad
   - You know...
   - Snow melts and it becomes dirty .. nice weather.
 
-## Karyn
-
-**28/11/2019 - Business writing**
-
-- It is inappropriate to use **emoticons** such as smiley faces in a formal email.
-- I just received a very funny email. I'll **forward** it to you so that you can read it.
-- I'm sure I emailed you but I can't find the message in the **sent items** folder.
-- A red exclamation mark shows that an email is **urgent** or high priority.
-- Please send a **reply** as soon as possible.
-- The emails in my **inbox** are sorted according to the date that they were received. The most recent are on top.
-- I am sending you the updated contract in the **attachment**.
-- My boss insists on being **copied** on all work-related emails.
-- Unsent messages that you have saved get stored in the **drafts** folder.
-- My company has just installed new **spam** filtering software.
 
 
+**03/12/2019**
 
-**Email** -> TODO
+- Snow melts -> we call it -> stick ?? Snow sticks on the street
 
-1. enquire
-2. order
-3. unfortunately
-4. afraid
-5. received
-6. arrange
-7. delivered
-8. regret
-9. inform
-10. assistance
-
-
-
-**Rewrite**
-
-1. Please, call me to arrange the conference in January.
-2. Lookin forward to seeing you next weekend.
-3. In my opinion Mr. Jameson's request is unnecessary.
-4. Thanks in advance for your help with the Dalton account.
-5. See you soon.
-
-
-
-**Preposition**
-
-1. in twenty minutes
-2. on the weekend
-3. at 5 o'clock
-4. by Friday at the latest
-5. at the afternoon.
-
-
-
-
+- enquire -> inform ask
+- I regret -> I sorry (info)
 
 
 
@@ -686,6 +667,55 @@ If I spend this money I will be broken. ?? is it correct?
   
 
 # JOURNAL
+
+## Karyn - 28/11/2019 - Business writing
+
+- It is inappropriate to use **emoticons** such as smiley faces in a formal email.
+- I just received a very funny email. I'll **forward** it to you so that you can read it.
+- I'm sure I emailed you but I can't find the message in the **sent items** folder.
+- A red exclamation mark shows that an email is **urgent** or high priority.
+- Please send a **reply** as soon as possible.
+- The emails in my **inbox** are sorted according to the date that they were received. The most recent are on top.
+- I am sending you the updated contract in the **attachment**.
+- My boss insists on being **copied** on all work-related emails.
+- Unsent messages that you have saved get stored in the **drafts** folder.
+- My company has just installed new **spam** filtering software.
+
+
+
+**Email** -> TODO
+
+1. enquire
+2. order
+3. unfortunately
+4. afraid
+5. received
+6. arrange
+7. delivered
+8. regret
+9. inform
+10. assistance
+
+
+
+**Rewrite**
+
+1. Please, call me to arrange the conference in January.
+2. Lookin forward to seeing you next weekend.
+3. In my opinion Mr. Jameson's request is unnecessary.
+4. Thanks in advance for your help with the Dalton account.
+5. See you soon.
+
+
+
+**Preposition**
+
+1. in twenty minutes
+2. on the weekend
+3. at 5 o'clock
+4. by Friday at the latest
+
+
 
 ## 13/11/2019 - Jennifer
 
