--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -242,6 +242,9 @@ permalink: notepad
 
 # Current 
 
+- [Business Writing](https://docs.google.com/document/d/1OFjecIys_sL1DQUC_AFz3fsprPJgMXeGR-cSGEuu_bk/edit#heading=h.yhh37lsu26kw)
+- [Phrasal Verbs](https://docs.google.com/document/d/1VPEFJsj8VrqXoHiEt_vT-cWSlKXDOwYO5P2zpQoQhAY/edit)
+
 ## Greeting -> Weather -> Weekend
 
 - Hi, Karyn. How are you getting on?
@@ -251,6 +254,216 @@ permalink: notepad
   - You know...
   - Snow melts and it becomes dirty .. nice weather.
 
+# CURRENT 05/12/2019
+
+Share with us.
+
+Служебный роман -> Office romance.
+
+**Chick flicks** -> A movie that appeals mainly to women
+
+A film that indulges in the hopes and dreams of women and/or girls. A film that has a happy, fuzzy, ridiculously unrealistic ending.
+
+- A film that has the following formula:
+- Two people fall in love
+- They get along fine
+- There is some kind of misunderstanding
+- They break up
+- They get back together
+- The end.
+
+
+
+**05/12/2019**
+
+ **Business Email Phrases**
+
+**1**  You can    <u>Could you</u>    You will    You 
+
+please arrange accommodation for me near to your offices? ![img](https://lh6.googleusercontent.com/_u19dNZIJByrtNxKInhs7uFa-ZxuA1FAKIrdkssVZglhUEyXM-W1rj5_CvmueGE5DBiAE7hcoAMtQxUkFs0cH0f58U88Qn-YaknUqTGu6uOioSNAADSkLo--WICkZSAuZeifPRFP)
+
+**2** We  __________ if you could send us the confirmation as soon as possible. 
+
+will be grateful  . . <u>would be grateful</u> . . .  would be happy . . .  will be glad
+
+**3** Unfortunately we  _________to change the contract. ![img](https://lh6.googleusercontent.com/PMM5-HGQMoX5P4jysgHWG24gnsv8WwIg_yu7F0lYYTi2Kaf2HT_3mW97YFbK6UYH6ybDuAhOv--YIywalhvAH0LKaJtZOT1ddP_FMuBzumZLxcSudHebJ93G7TwxpDe8CYZ7mqxd)
+
+can't    cannot    <u>are unable</u>     unable
+
+**4** If possible I  _______ to make an appointment to see you to discuss the new contract for next year. ![img](https://lh6.googleusercontent.com/sPmE12gg7Re889OpBkDTOQlUPRgXsHUak5cr9tqVXcir9gf5rw5jlLHHq_1VQZEpvjzVbi82DFpqG_kE18oNiyHZ0kwQf4jZL7A865B2k9EluI23aMOEtxqewkpAz4Z6kjeqoSXE)want  . . . <u>would like</u>  . . . .  would . . like
+
+**5** I  ______________at the sales meeting next week. ![img](https://lh5.googleusercontent.com/kM842aZAW2dvuj-JvROLS8_m8Sj_EjhtNH35w6rgitrQjzdSjT13uXnEt7hvRL8K03r1leFvMvE0vBP4FiMCZyhqbhz8YBzs2B0Umo0KEIuS8hOtZT4zaSloXQ0mcy6BNQX-0bau)
+
+ look forward to       look forward for seeing      look to     <u>look forward to seeing you</u>
+
+**6** Feel to _________contact me if you need any more information. 
+
+ Glad . .  <u>free</u>  . . fine .  . liberated 
+
+**7** I have placed an order but need some more details ___________shipment. 
+
+ For    . on      <u>regarding</u>      concerned 
+
+**8** Do not __________ contact me if you need any more information. 
+
+Wait to     stop     appreciate . <u>hesitate to</u> .   hesitate 
+
+**9** Please _______ your decision as soon as possible. 
+
+make me . . . . . let me . . . .  know . . . give . . . let me 
+
+**10** We look forward to a successful working relationship  ___________
+
+in the future      <u>on future</u>     at the future     to future . 
+
+
+
+**Phrasal Verbs**
+
+1.We tried to _______ our point _______, but he just wouldn't listen.
+<u>Get across</u>
+  get around
+Get together
+
+2. My boss and I don't ________ at all.
+    get along
+    <u>get on</u>
+    get in
+3. It's OK. Don't worry. You'll ________ this.
+    get along
+    get on
+    <u>get over</u>
+4. The museum? You should ________ at the third stop.
+    get through
+    <u>get off</u>
+    get on
+5. As soon as he ________ the horse, I knew that he had never been on one before.
+    got on
+    <u>got around</u>
+    got in
+6. Tyra tried to ______ cheating on her Math test but the teacher found out and gave her an “F.”
+    <u>Get away with</u>
+    got rid of
+    got off
+8. I'm really tired because I ________ at 5 AM this morning. 
+    got around
+    <u>got up</u> 
+    got on
+7. Friends can help you to ________ a difficult time in your life. 
+    get around
+    <u>get by</u>
+    get over
+8.Rachel is short of cash this month, she barely has enough money to _____.
+Get on
+Get over
+<u>Get by</u>
+9. Donnie had to clean his room on Saturday but he tried to _______ it by telling his mom he was allergic to dust.
+Get by
+Get out of  
+<u>Get over</u>  
+
+
+
+
+
+# Phrasal verb
+
+# Phrasal verb - GET 
+
+![](_img/phrasal-verbs/get.png)
+
+1. Get down to - Заняться чем-то серьезно
+2. Get out of - Избегать чего-то
+3. Get by - Выживать
+4. Get into - Залезть в (машину)
+5. Get out of - Вылезти из (машины)
+6. Get at - Намекать
+7. Get back at - Отомстить кому-то
+8. Get along - Ладить с кем-то
+9. Get on (with) - Ладить с кем-то
+10. Get across -> Донести идею до слушателя
+11. Get over - Оправиться от чего-либо, пережить
+12. Get on - Зайти в автобуса
+13. Get off - Выйти из автобуса
+14. Get away - Выходить сухим из воды
+15. Get up - Вставать
+16. Get around - Путешествовать
+
+
+
+## 03/12/2019
+
+**SORT OUT**
+
+Meaning: To resolve/fix a problem or difficult situation.
+
+I don't care how you do it, but you have to SORT this problem OUT now! If you don't, it's just going to get worse.
+
+"Are you still having problems with Sue at work?"
+
+"No, we had a long conversation last weekend and SORTED it OUT. Everything is fine between us now."
+
+**TAKE CARE OF**
+
+Meaning: To be responsible for making sure that something is done.
+
+Peter, it's really important that they are told about the changes. I can't do it. So, can you TAKE CARE OF it for me?
+
+Don't worry, I'll TAKE CARE OF organising the party (getting the drinks, booking the place etc...). You just have to invite people to it.
+
+**CARRY OUT**
+
+Meaning: To do/perform a task (or tasks) you have promised or been told to do.
+
+Ok, you need to CARRY OUT my instructions exactly as I say. First, print the summary and give it to Tyra to proofread it and then make her changes. 
+
+Make sure that it's CARRIED OUT by Thursday at the latest. If you don't do it by then, it's going to cause us big problems.
+
+**LOOK INTO**
+
+Meaning: To investigate/examine what the cause of something is, whether something is true or if something is possible.
+
+We still don't know why it happened, but we are LOOKING INTO it. As soon as we know anything, we'll let you know.
+
+What you've suggested we do is a very good idea, but I'm not sure it's possible. I need to LOOK INTO it before I can say if we are going to try to do it or not.
+
+**GO OVER**
+
+Meaning: To explain something to somebody so they understand it and/or know what to do.
+
+If you don't understand how to use a grammatical structure you have learnt in your English class, ask the teacher to GO OVER it again with you. You should understand it then.
+
+Thank you all for agreeing to work for free at tomorrow's festival. Now, I'll GO OVER what's happening on the day and what you each have to do there.
+
+**DEAL WITH**
+
+Meaning: To be responsible for or take responsibility to resolve things (e.g. difficult situations, problems etc...).
+
+"There's a problem with a customer and l don't know what to do."
+
+"Don't worry, leave it to me. I'll DEAL WITH it."
+
+When you work as a receptionist in a hotel you have to DEAL WITH all the problems and requests that the guests staying there may have..
+
+**FIND OUT**
+
+Meaning: To learn something through investigation or discovery that you don't currently know.
+
+"What time does the train to London leave on Friday?"
+
+"I don't know, but I'll FIND OUT and tell you this afternoon."
+
+I was talking to James this morning and I FOUND OUT why he didn't come to the party. His parents told him that he couldn't.
+
+1. I've had this problem with my computer as well. If you delete some files and then restart it, it should    sort out________the problem and it will be working again. 
+2. I'm on holiday next week, so I can't write the weekly report for next week. So, would you mind   _taking care of _________  it for me while I'm away?   
+3. Have you found out______ if we are getting an end of the year bonus yet?
+4. My boss is on vacation so I not only have my own work to do but I also have to _______ deal with______his problems also. 
+5. The pilot has to _carry out_____a series of complex maneuvers procedures.
+6. The government will _look into______ how to reduce unemployment.
+7. We brought in a management consultant to __sort out___ the mess.
+8. I always __go over___ my  notes just before I make a presentation.
+
 
 
 **03/12/2019**
@@ -259,8 +472,6 @@ permalink: notepad
 
 - enquire -> inform ask
 - I regret -> I sorry (info)
-
-
 
 
 
